# my_impact

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  Dockerfile  INDEX.md  LICENSE.txt  LOCAL_DEVELOPMENT.md  NOTICE  OPENSPACE_DAY2_QUICK_START.md  PHASE_0_1_STATUS.md  README.md  README_DEPLOYMENT.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pytest.ini
.github/instructions/: copilot-instructions.md  cost_optimization.instructions.md  documentation.instructions.md  infrastructure_security.instructions.md  operational_excellence.instructions.md  performance_efficiency.instructions.md  reliability.instructions.md  writing_style.instructions.md
.github/workflows/: azure-static-web-apps-ashy-field-00f8a681e.yml  azure-static-web-apps-black-rock-09c64d61e.yml  deploy-backend.yml  deploy-frontend.yml  test-backend.yml
api/: __init__.py  main.py  main.py.backup_20260114_023734  main.py.backup_20260117_041831
data/: culture_expectations_leadership.csv  culture_expectations_technical.csv
docs/: API.md  DOCUMENTATION_ORGANIZATION.md  PHASE_2_DESIGN.md  USAGE.md
docs/api/: README.md  spec.md
docs/architecture/: data-flow.md  overview.md  security-design.md  system-overview.md
docs/guides/: 01-quick-start.md  02-local-development.md  03-deployment.md  04-demo-script.md
docs/planning/: PHASE_0_1_STATUS.md  PHASE_2_BUILD_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_README.md  README.md
docs/prompt/: phase0_system_prompt.md
infra/: AZURE_CONTAINER_APPS_DEPLOYMENT.md  AZURE_STATIC_WEB_APPS_DEPLOYMENT.md  CI_CD_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  Deploy-Azure.ps1
infra/bicep/: README.md  deploy.bicep  main.bicep  parameters.example.bicepparam
myimpact/: __init__.py  assembler.py  cli.py
prompts/: Annual Review Rubrics_Culture_Radford.csv  goal_generation_framework_prompt.txt  goal_generation_system_prompt.txt  org_focus_areas_demo.md  org_themes_hc.md
scripts/: demo_ready_from_container_for_azure.ps1  fix-az-cli-for-external-users.ps1  prompt_assembler.py  setup_env.ps1
tests/: README.md  __init__.py  conftest.py  test_api.py  test_assembler.py  test_cli.py  test_input_sanitization.py
tests/.github/instructions/: testing_guidelines.instructions.md
webapp/: index.html  staticwebapp.config.json
webapp/js/: api.js  app.js
