[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myimpact-api"
version = "0.1.0"
description = "AI-powered goal articulation assistant"
readme = {text = "MyImpact API - Goal articulation assistant", content-type = "text/plain"}
# Performance: Updated to modern SPDX license format (avoid deprecation warning)
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "MyImpact Team"}
]

# Performance Efficiency: Pin dependencies with upper bounds
dependencies = [
    # Performance: Async web framework with connection pooling
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    
    # Performance: HTTP client with async support + timeouts (5-10s)
    "httpx>=0.26.0,<0.27.0",
    
    # Reliability: Structured logging for monitoring (key metrics)
    "python-json-logger>=2.0.7,<3.0.0",
    
    # Performance: Fast JSON serialization (orjson, avoid blocking)
    "orjson>=3.9.0,<4.0.0",
    
    # Reliability: Configuration management with validation
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    
    # Security: CORS middleware
    "python-multipart>=0.0.6,<0.1.0",
    
    # Performance: Rate limiting for expensive endpoints (10/min)
    "slowapi>=0.1.9,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.12.0,<24.0.0",
    "ruff>=0.1.0,<0.2.0",
]

[tool.setuptools]
# Point to both 'api' and 'myimpact' directories for package sources
packages = ["api", "myimpact"]

[tool.setuptools.package-data]
api = ["*.json", "*.yaml"]
myimpact = ["*.json", "*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Performance: Parallel test execution
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.coverage.run]
source = ["api"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
# Reliability: Enforce test coverage (monitor key metrics)
fail_under = 70
show_missing = true